# flask-with-firestore-demo

./: .gitignore  Makefile  README.md  app.py  db.py  pyproject.toml  requirements.txt  summary.md
tests/: conftest.py  test_app.py
